--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "grunt": "~0.4.1"
   },
   "dependencies": {
-    "grunt-contrib-uglify": "~0.2.2"
+    "grunt-contrib-uglify": "~0.2.2",
+    "grunt-contrib-concat": "~0.3.0"
   }
 }
