--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
     "url": "github.com:monokrome/soundcloud-hyperbone"
   },
   "devDependencies": {
-    "grunt": "~0.4.1"
-  },
-  "dependencies": {
+    "grunt": "~0.4.1",
     "grunt-contrib-uglify": "~0.2.2",
     "grunt-contrib-concat": "~0.3.0"
   }
